Colaboratory를 통해 생성됨

--- a/Week1_2.ipynb
+++ b/Week1_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Week1-2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPGhk2+W3G+thDDlxRMl3Hg",
+      "authorship_tag": "ABX9TyOcxqL6ZUhJswkhrDqgq7ag",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,27 +30,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 139
+          "base_uri": "https://localhost:8080/"
         },
         "id": "HpaUelSbCV3Z",
-        "outputId": "96e02966-dbd3-411f-fb02-6d02f1b1b355"
+        "outputId": "25319151-4b6f-44f3-8802-0c8e36b3327d"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-01436dd4597b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(machine learning)\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "machine learning\n"
           ]
         }
       ],
       "source": [
-        "print(machine learning)\n",
+        "print(\"machine learning\")\n",
         "\n"
       ]
     }
