Colaboratory를 통해 생성됨

--- a/Week1_2.ipynb
+++ b/Week1_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Week1-2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOcxqL6ZUhJswkhrDqgq7ag",
+      "authorship_tag": "ABX9TyNydVUTD0/uJXAKkTQPn61T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,25 +30,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HpaUelSbCV3Z",
-        "outputId": "25319151-4b6f-44f3-8802-0c8e36b3327d"
+        "outputId": "5eb6b504-78d4-47a6-bd0b-b5efef3654b5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "machine learning\n"
+            "machine learning\n",
+            "머신러닝 1~2주차 colab기록\n"
           ]
         }
       ],
       "source": [
         "print(\"machine learning\")\n",
+        "print(\"머신러닝 1~2주차 colab기록\")\n",
         "\n"
       ]
     }
