Colaboratory를 통해 생성됨

--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -6,7 +6,7 @@
       "name": "Week4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPaoT6lehAhAm3bPrZDI94y",
+      "authorship_tag": "ABX9TyNbDsT9jowuSOmTQrleH4Pv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -260,13 +260,25 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "print(iris_dataset['target_names'])"
       ],
       "metadata": {
-        "id": "CCKPu8oAFWzn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CCKPu8oAFWzn",
+        "outputId": "191e8474-0f50-4cf0-b9da-a3a9c073f793"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['setosa' 'versicolor' 'virginica']\n"
+          ]
+        }
+      ]
     }
   ]
 }
