Colaboratory를 통해 생성됨

--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -6,7 +6,7 @@
       "name": "Week4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNbDsT9jowuSOmTQrleH4Pv",
+      "authorship_tag": "ABX9TyNx0KUdFRgrd0QcZiFxqEus",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,6 +276,29 @@
           "name": "stdout",
           "text": [
             "['setosa' 'versicolor' 'virginica']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(iris_dataset['feature_names'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XprU_g9DGRxa",
+        "outputId": "bdfb9c78-4f61-4005-8c92-69a2345f4480"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n"
           ]
         }
       ]
