Colaboratory를 통해 생성됨

--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -6,7 +6,7 @@
       "name": "Week4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOquCTbZVK6CEYVB8OuGuTz",
+      "authorship_tag": "ABX9TyPIVxTzXE5lDXI51tzVTH2A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -458,15 +458,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "5번 부터 week 에 학습 !"
       ],
       "metadata": {
-        "id": "idI86-BGOjvq"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "u-yiBc_VP8_W"
+      }
     }
   ]
 }
