Colaboratory를 통해 생성됨

--- a/mid_term.ipynb
+++ b/mid_term.ipynb
@@ -6,7 +6,7 @@
       "name": "mid-term.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMoDeH8HayRH8JI1AqhFTAu",
+      "authorship_tag": "ABX9TyOV5e/7LqZR7T5H3EPIdye/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -489,13 +489,79 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "knn = KNeighborsClassifier(n_neighbors=1)\n",
+        "\n",
+        "knn.fit(X_train, y_train)"
       ],
       "metadata": {
-        "id": "x-YGPh0QO6gt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x-YGPh0QO6gt",
+        "outputId": "a0b0cfe3-f429-4691-961d-8f33e41679bc"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "KNeighborsClassifier(n_neighbors=1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#머신러닝 학습모델의 표준 표맷 (도장찍듯 기억하기)\n",
+        "\n",
+        "#import\n",
+        "#from sklearn.branch import model_name\n",
+        "#create instance\n",
+        "#model = model_name()\n",
+        "#fit model\n",
+        "#model.fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "id": "payQn8UBVu93"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_new=np.array([[9,1.3,2,0.2]])\n",
+        "print(X_new.shape)\n",
+        "\n",
+        "prediction=knn.predict(X_new)\n",
+        "print(\"prediction result\",prediction)\n",
+        "print(\"target name of prediction result\",iris_dataset['target_names'][prediction])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D1Tqa-GCWond",
+        "outputId": "ddc844dc-277f-49d9-9cfa-c74379874f2e"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 4)\n",
+            "prediction result [1]\n",
+            "target name of prediction result ['versicolor']\n"
+          ]
+        }
+      ]
     }
   ]
 }
