Colaboratory를 통해 생성됨

--- a/mid_term.ipynb
+++ b/mid_term.ipynb
@@ -6,7 +6,7 @@
       "name": "mid-term.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOV5e/7LqZR7T5H3EPIdye/",
+      "authorship_tag": "ABX9TyMaL3jsqfNf9xmQ7N+6mTRF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
         }
       ],
       "source": [
-        "#3주차 Code\n",
+        "#3주차 Code iris dataset knn model\n",
         "\n",
         "# 필요한 라이브러리들 import & 데이터 읽고 프린트 (key)\n",
         "\n",
@@ -562,6 +562,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#5주차 Code naive bayes\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "WSZ88AmpZOUn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
