Colaboratory를 통해 생성됨

--- a/Week8.ipynb
+++ b/Week8.ipynb
@@ -31,7 +31,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fb2beb5d-8fc1-4f52-fd9b-c657de6c9d34"
+        "outputId": "9a025abb-9189-4273-96b6-7a2cadf17bf2"
       },
       "source": [
         "import torch\n",
@@ -99,9 +99,9 @@
         "    print('Epoch:', '%04d' % (epoch + 1), 'cost =', '{:.9f}'.format(avg_cost))\n",
         "\n",
         "print('Learning finished')\n",
-        "print(\"time :\", time.time())  # Q1) Complete the code to print the total execution time."
+        "print(\"time :\", time.time()-start)  # Q1) Complete the code to print the total execution time."
       ],
-      "execution_count": 14,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
             "Epoch: 0019 cost = 0.289959490\n",
             "Epoch: 0020 cost = 0.288146228\n",
             "Learning finished\n",
-            "time : 1649913754.9038537\n"
+            "time : 102.18365526199341\n"
           ]
         }
       ]
@@ -167,7 +167,7 @@
         "    plt.imshow(mnist_test.test_data[r:r + 1].view(28, 28), cmap='Greys', interpolation='nearest')\n",
         "    plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
